--- a/index.html
+++ b/index.html
@@ -16,80 +16,69 @@
       background-color: #f4f4f9;
     }
     .container {
-      max-width: 600px;
-      width: 90%;
-      padding: 20px;
-      background-color: #ffffff;
-      box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-      border-radius: 8px;
+        max-width: 100%;    /* שינוי מ-600px ל-100% */
+        width: 90%;
+        padding: 15px;      /* הקטנת ריפוד */
+        margin: 10px;
     }
+
     h1 {
-      font-size: 24px;
-      text-align: center;
+        font-size: 20px;    /* הקטנת גודל כותרת */
+        margin: 10px 0;
     }
+
     p {
-      text-align: center;
-      font-size: 16px;
+        font-size: 14px;    /* הקטנת גודל טקסט */
+        margin: 10px 0;
     }
+
     textarea {
-      width: 100%;
-      height: 150px;
-      margin: 10px 0;
-      padding: 10px;
-      border-radius: 4px;
-      border: 1px solid #ccc;
-      resize: none;
-    }
-    .button-group {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-    .button-group button {
-      padding: 10px;
-      font-size: 16px;
-      color: #ffffff;
-      background-color: #007bff;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-    }
-    .button-group button:hover {
-      background-color: #0056b3;
-    }
-    [dir="rtl"] {
-        text-align: right;
-    }
-    [dir="ltr"] {
-        text-align: left;
-    }
-    .credits {
-        margin-top: 30px;
-        width: 100%;          
-        text-align: center;   
-        font-size: 14px;
-        color: #666;
-    }
-    .credits a {
-        color: #007bff;
-        text-decoration: none;
-    }
-    .credits a:hover {
-        text-decoration: underline;
-    }
-    @media only screen and (max-width: 600px) and (hover: none) and (pointer: coarse) {
-      h1 {
-        font-size: 20px;
-      }
-      p {
-        font-size: 14px;
-      }
-      .button-group button {
-        font-size: 14px;
+        width: 95%;        /* הקטנה קלה מ-100% */
+        height: 120px;     /* הקטנת גובה */
+        margin: 8px 0;
         padding: 8px;
-      }
     }
-  </style>
+
+    .button-group {
+        gap: 8px;          /* הקטנת מרווח בין כפתורים */
+    }
+
+    .button-group button {
+        padding: 8px;
+        font-size: 14px;   /* הקטנת גודל טקסט בכפתורים */
+        margin: 4px 0;
+    }
+
+    /* עדכון media query למובייל */
+    @media only screen and (max-width: 430px) {  /* התאמה לאייפון 15 פרו ודומים */
+        .container {
+            width: 95%;
+            padding: 10px;
+        }
+
+        h1 {
+            font-size: 18px;
+        }
+
+        p {
+            font-size: 13px;
+        }
+
+        textarea {
+            height: 100px;
+        }
+
+        .button-group button {
+            font-size: 13px;
+            padding: 6px;
+        }
+
+        .credits {
+            font-size: 12px;
+            margin-top: 20px;
+        }
+    }
+</style>
 </head>
 <body>
 <div class="container">
