--- a/index.html
+++ b/index.html
@@ -70,16 +70,76 @@
     }
     .credits a:hover {
         text-decoration: underline;
-    }
-
-    /* התאמה למובייל עם אותו עיצוב */
+    } לא 
     @media only screen and (max-width: 600px) {
         .container {
-            width: 95%;
-            margin: 10px;
+            width: 92%;
+            padding: 15px;
+            margin: 15px auto;
+        }
+
+        h1 {
+            font-size: 22px;
+            line-height: 1.4;
+            margin-bottom: 15px;
+        }
+
+        p {
+            font-size: 16px;
+            line-height: 1.5;
+            margin: 15px 0;
+            padding: 0 10px;
+        }
+
+        textarea {
+            height: 140px;
+            margin: 12px 0;
+            font-size: 16px; 
+            -webkit-text-size-adjust: 100%; 
+        }
+
+        .button-group {
+            gap: 12px;
+            margin-top: 15px;
+        }
+
+        .button-group button {
+            padding: 12px 10px;
+            font-size: 16px;
+            line-height: 1.4;
+            min-height: 65px; 
+            touch-action: manipulation; 
+            -webkit-tap-highlight-color: transparent; 
+        }
+
+        .credits {
+            margin-top: 25px;
+            padding: 0 10px;
         }
     }
-</style> 
+    @media only screen and (max-width: 380px) {
+        .container {
+            width: 95%;
+            padding: 12px;
+        }
+
+        h1 {
+            font-size: 20px;
+        }
+
+        .button-group button {
+            padding: 10px 8px;
+        }
+    }
+    @supports (-webkit-touch-callout: none) {
+        input,
+        textarea,
+        button {
+            font-size: 16px !important;
+        }
+    }
+</style>
+   
 </head>
 <body>
 <div class="container">
