--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
 <!DOCTYPE html>
-<html lang="he">
+<html lang="he" dir="rtl">  <!-- הוספת dir="rtl" -->
 <head>
   <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">  <!-- חסר viewport -->
+  <meta name="description" content="Code cleaner tool for removing comments and empty lines">  <!-- חסר description -->
   <title>ClearCode</title>
   <style>
     body {
@@ -70,7 +72,7 @@
     }
     .credits a:hover {
         text-decoration: underline;
-    } לא 
+    } 
     @media only screen and (max-width: 600px) {
         .container {
             width: 92%;
