--- a/index.html
+++ b/index.html
@@ -125,6 +125,7 @@
       font-size: 20px; /* גודל טקסט */
       cursor: pointer; /* יד על העכבר */
       float: right; /* מיקום הכפתור */
+      margin-left: 10px; /* רווח מהכותרת */
     }
   </style>
 </head>
