--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>מסנן שורות ריקות והערות - Line Filter</title>
+  <title>ClearCode</title>
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -119,19 +119,19 @@
     }
 
     .close-button {
-      background: none; /* ללא צבע רקע */
-      border: none; /* ללא גבול */
-      color: white; /* צבע טקסט */
-      font-size: 20px; /* גודל טקסט */
-      cursor: pointer; /* יד על העכבר */
-      float: right; /* מיקום הכפתור */
-      margin-left: 10px; /* רווח מהכותרת */
+      background: none; 
+      border: none; 
+      color: black; 
+      font-size: 20px; 
+      cursor: pointer; 
+      float: right; 
+      margin-left: 10px; 
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>מסנן שורות ריקות והערות - Line Filter</h1>
+    <h1>ClearCode</h1>
   </header>
   <main>
     <div class="text-area-container">
