--- a/index.html
+++ b/index.html
@@ -4,130 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>ClearCode</title>
-  <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
-      background-color: #f0f0f0; /* צבע רקע נייטרלי */
-      color: #333;
-    }
-
-    header {
-      background-color: #4a4a4a; /* צבע כהה יותר */
-      color: white;
-      width: 100%;
-      padding: 15px 20px;
-      text-align: center;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
-    }
-
-    header h1 {
-      margin: 0;
-      font-size: 1.5em;
-    }
-
-    main {
-      padding: 20px;
-      width: 100%;
-      max-width: 800px; /* הגבלת רוחב */
-    }
-
-    .text-area-container {
-      display: flex;
-      flex-direction: column;
-      gap: 15px;
-    }
-
-    textarea {
-      width: 100%;
-      height: 150px;
-      padding: 10px;
-      font-size: 14px;
-      border: 1px solid #ccc;
-      border-radius: 4px;
-      resize: none;
-      box-shadow: inset 0 1px 3px rgba(0, 0, 0, 0.1);
-    }
-
-    .button-container {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
-    }
-
-    button {
-      padding: 10px;
-      font-size: 16px;
-      border: none;
-      border-radius: 4px;
-      cursor: pointer;
-      transition: background-color 0.3s ease;
-      background-color: #007bff; /* צבע אחיד */
-      color: white;
-    }
-
-    button:hover {
-      background-color: #0056b3; /* צבע כהה יותר בעת ריחוף */
-    }
-
-    aside {
-      position: fixed;
-      top: 0;
-      right: 0;
-      height: 100%;
-      width: 300px;
-      background-color: white;
-      border-left: 1px solid #ddd;
-      box-shadow: -2px 0 5px rgba(0, 0, 0, 0.1);
-      overflow-y: auto;
-      display: none;
-      transition: transform 0.3s ease-in-out;
-    }
-
-    aside.open {
-      display: block;
-    }
-
-    aside header {
-      padding: 10px;
-      background-color: #4a4a4a; /* צבע כהה יותר */
-      color: white;
-      text-align: center;
-    }
-
-    .history-list {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-
-    .history-item {
-      padding: 10px;
-      border-bottom: 1px solid #ddd;
-      cursor: pointer;
-      font-size: 14px;
-    }
-
-    .history-item:hover {
-      background-color: #f0f0f0; /* צבע רקע בעת ריחוף */
-    }
-
-    .close-button {
-      background: none; 
-      border: none; 
-      color: black; 
-      font-size: 20px; 
-      cursor: pointer; 
-      float: right; 
-      margin-left: 10px; 
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css"> <!-- הפניה לקובץ CSS -->
 </head>
 <body>
   <header>
@@ -155,110 +32,6 @@
     </header>
     <ul id="historyList" class="history-list"></ul>
   </aside>
-  <script>
-    function clearText() {
-      document.getElementById("inputText").value = "";
-      document.getElementById("outputText").value = "";
-    }
-
-    function processText(option) {
-      const input = document.getElementById("inputText").value;
-      let result;
-
-      if (option === "spaces") {
-        result = input.split("\n").filter(line => line.trim() !== "").join("\n");
-      } else if (option === "comments") {
-        result = input.split("\n").filter(line => !line.trim().startsWith("//")).join("\n");
-      } else {
-        result = input
-          .split("\n")
-          .filter(line => line.trim() !== "" && !line.trim().startsWith("//"))
-          .join("\n");
-      }
-
-      document.getElementById("outputText").value = result;
-      addToHistory(input, result, option);
-    }
-
-    function copyToClipboard() {
-      const output = document.getElementById("outputText").value;
-      navigator.clipboard.writeText(output).then(() => {
-        alert("הטקסט הועתק ללוח!");
-      });
-    }
-
-    function loadHistory() {
-      const historyList = document.getElementById("historyList");
-      const history = JSON.parse(localStorage.getItem("textHistory")) || [];
-      historyList.innerHTML = "";
-      history.forEach(({ input, result, option, timestamp }, index) => {
-        const li = document.createElement("li");
-        li.className = "history-item";
-
-        // טקסט מקוצר ל-5 שורות
-        const lines = input.split("\n");
-        const shortText = lines.slice(0, 5).join("\n");
-        const isTruncated = lines.length > 5;
-
-        li.innerHTML = `
-          <div class="history-text">${isTruncated ? shortText : input}</div>
-          <button class="show-more-button" onclick="toggleFullText(${index})" style="display: ${
-          isTruncated ? "block" : "none"
-        };">הצג עוד</button>
-          <div class="history-timestamp">${timestamp}</div>
-        `;
-
-        li.setAttribute("data-full-input", input);
-        li.setAttribute("data-full-result", result);
-        li.setAttribute("data-option", option);
-        li.setAttribute("data-index", index);
-
-        li.addEventListener("click", (event) => {
-          if (!event.target.classList.contains("show-more-button")) {
-            document.getElementById("inputText").value = input;
-            document.getElementById("outputText").value = result;
-          }
-        });
-
-        historyList.appendChild(li);
-      });
-    }
-
-    function toggleFullText(index) {
-      const historyList = document.getElementById("historyList");
-      const li = historyList.querySelector(`.history-item[data-index="${index}"]`);
-      const fullInput = li.getAttribute("data-full-input");
-      const textDiv = li.querySelector(".history-text");
-      const button = li.querySelector(".show-more-button");
-
-      if (button.innerText === "הצג עוד") {
-        textDiv.innerText = fullInput;
-        button.innerText = "הצג פחות";
-      } else {
-        const lines = fullInput.split("\n");
-        const shortText = lines.slice(0, 5).join("\n");
-        textDiv.innerText = shortText;
-        button.innerText = "הצג עוד";
-      }
-    }
-
-    function addToHistory(input, result, option) {
-      const timestamp = new Date().toLocaleString();
-      const history = JSON.parse(localStorage.getItem("textHistory")) || [];
-      history.push({ input, result, option, timestamp });
-      localStorage.setItem("textHistory", JSON.stringify(history));
-      loadHistory();
-    }
-
-    // הצגת תפריט היסטוריה
-    function toggleHistory() {
-      const sidebar = document.getElementById("historySidebar");
-      sidebar.classList.toggle("open");
-      loadHistory(); // טען את ההיסטוריה כאשר התפריט נפתח
-    }
-
-    // אתחול ההיסטוריה בעת טעינת הדף
-    loadHistory();
-  </script>
+  <script src="script.js"></script> <!-- הפניה לקובץ JavaScript -->
 </body>
 </html>
